2002-07-24  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/accidental-placement.cc (extent_callback): remove function
	(position_accidentals): do nothing if not live.

2002-07-24  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/mutopia/J.S.Bach/baerenreiter-sarabande.ly: Add
	forcedBreak options and fix measure count comments.

	* GNUmakefile.in: Junk intl.

	* config.make.in (prefix): Prepend $(DESTDIR) to allow install
	without overriding prefix.

	* aclocal.m4: Regenerate.
	
	* stepmake/aclocal.m4: Don't expand $prefix: fixes install with
	other $prefix.

	* cygwin/GNUmakefile: 
	* ly/GNUmakefile: 
	* python/GNUmakefile: 
	* make/GNUmakefile: 
	* mf/GNUmakefile: 
	* scm/GNUmakefile:
	* tex/GNUmakefile: use local_package_datadir iso datadir.

	* make/substitute.make (ATVARIABLES): Add local_lilypond_datadir.

	* aclocal.m4: Regenerate.
	
	* config.hh.in:
	* config.make.in:
	* stepmake/aclocal.m4: Cleanups and more conventional naming for
	datadir ($prefix/share), package_datadir ($prefix/$package), and
	local_package_datadir ($prefix/$package/$version).
	
	* make/lilypond-vars.make:
	* scripts/ly2dvi.py:
	* scripts/lilypond-book.py:
	* scripts/mup2ly.py:
	* scripts/midi2ly.py: use local_package_datadir iso datadir.
	
	* GNUmakefile.in: build_datadir without version.
	
	* lily/main.cc: Datadir cleanup.

	* lily/text-item.cc (lookup_text): 
	* lily/music-output-def.cc (print_smob): 
	* lily/mensural-ligature.cc (brew_molecule):
	* lily/beam-quanting.cc (score_slopes_dy, score_forbidden_quants):
	Fix warnings.
	
2002-07-23  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/mutopia/J.S.Bach/baerenreiter-sarabande.ly: Warn when not
	using 6 systems, like the original.

	* input/test/count-systems.ly: New file.

	* lily/spanner.cc (get_broken_into):
	* lily/grob.cc (original_scm, line_scm): New function.

	* lily/include/grob.hh (ly_scm2grob_array): Moved from
	group-interface.hh and renamed.
	(ly_grob_array2scm): New function.
